--- a/views/partials/cards.ejs
+++ b/views/partials/cards.ejs
@@ -13,6 +13,6 @@
         <p class="card-text">
             <%=description%>
         </p>
-        <a href="<%=link%>" class="btn btn-primary">View Item</a>
+        <a href="<%=link%>" class="btn btn-primary">Add to Cart</a>
     </div>
 </div>
