--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,38 +1,12 @@
 <%-include("partials/navbar.ejs")%>
     <%-include("partials/title.ejs",{title:"JEWELLERY STORE"})%>
         <%-include("partials/search.ejs")%>
-            <!-- <div>
-                <%-include("partials/cards.ejs",{title:"Item 1",weight:"weight",cost:"cost",description:"This is the description of item 1.",link:"#"})%>
-            </div>
-            <div>
-                <%-include("partials/cards.ejs",{title:"Item 2",weight:"weight",cost:"cost",description:"This is the description of item 2.",link:"#"})%>
-            </div>
-            <div>
-                <%-include("partials/cards.ejs",{title:"Item 3",weight:"weight",cost:"cost",description:"This is the description of item 3.",link:"#"})%>
-            </div>
-            <div>
-                <%-include("partials/cards.ejs",{title:"Item 4",weight:"weight",cost:"cost",description:"This is the description of item 4.",link:"#"})%>
-            </div> -->
-
-            <div class="container text-center">
-                <div class="row col row-cols-2">
-                    <div class="col" style="margin: auto; margin-top: 50px;">
-                        <%-include("partials/cards.ejs",{title:"Item 1",weight:"weight",cost:"cost",description:"This is the description of item 1.",link:"#"})%>
-
+            <div class="container" style="display:flex;flex-direction:row;flex-wrap:wrap;">
+                <% for(var i=0;i<products.length;i++) {%>
+                    <div class="col" style="margin: auto; margin-top: 50px; min-width: 300px; text-align: center;">
+                        <%-include("partials/cards.ejs",{title:products[i].name,weight:products[i].weight,cost:products[i].price,description:products[i].desc,link:"/addtoCart?id="+products[i]._id})%>
                     </div>
-                    <div class="col" style="margin: auto; margin-top: 50px;">
-                        <%-include("partials/cards.ejs",{title:"Item 2",weight:"weight",cost:"cost",description:"This is the description of item 2.",link:"#"})%>
-
-                    </div>
-                    <div class="col" style="margin: auto; margin-top: 50px;">
-                        <%-include("partials/cards.ejs",{title:"Item 3",weight:"weight",cost:"cost",description:"This is the description of item 3.",link:"#"})%>
-
-                    </div>
-                    <div class="col" style="margin: auto; margin-top: 50px;">
-                        <%-include("partials/cards.ejs",{title:"Item 4",weight:"weight",cost:"cost",description:"This is the description of item 4.",link:"#"})%>
-
-                    </div>
-                </div>
+                    <%}%>
             </div>
             </body>
             <%-include("partials/footer.ejs")%>
