--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,9 @@
                 <a class="btn btn-primary" href="/login" role="button">Log in</a>
                 <a class="btn btn-primary" href="/createAccount" role="button">Create Account</a>
                 <a class="btn btn-primary" href="/addProduct" role="button">Add Product</a>
-                <a class="btn btn-primary" href="/viewcart" role="button">Cart</a>
+                <a class="btn btn-primary" href="/orderstatus" role="button">Ordertrack/cancel</a>
+                <a class="btn btn-primary" href="/viewcart" role="button">Cart / paymet / order</a>
+                <a class="btn btn-primary" href="/query" role="button">Chat us</a>
             </div>
         </div>
         </body>
