--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,7 +95,7 @@
             </h1>
             <input type="text" name="email" placeholder="Enter Username" id="username">
             <input type="password" name="password" placeholder="Enter password" id="password">
-            <button href="/profile" style="background-color:white; border:0ch ; border-radius: 4px; border-color: white;">
+            <button href="/home" style="background-color:white; border:0ch ; border-radius: 4px; border-color: white;">
                 <input type="submit" name="" value="Login" id="submit" onclick="validate()">
             </button>
 
