--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/cart.css">
+    <link rel="stylesheet" href="/assets/css/cprofile.css">
+    <link rel="stylesheet" href="/assets/css/query.css">
     <script src="/assets/js/login.js"></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
@@ -24,27 +26,32 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../profile">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../home">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li> -->
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li> -->
+                    <li>
+                        <a class="nav-link active" href="../login" role="button">Log in</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../createAccount" role="button">Create Account</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../addProduct" role="button">Add Product</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../orderstatus" role="button">Order status</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../viewcart" role="button">View Cart</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../query" role="button">Chat us</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../CustomerProfile" role="button">View Profile</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="../order" role="button">View order</a>
+                    </li>
                 </ul>
 
             </div>
