--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -23,7 +23,7 @@
             </div> -->
             <div class="form-group">
                 <label for="exampleFormControlFile1">Upload Item Image </label>
-                <input type="file" name="imageName" class="form-control-file" id="exampleFormControlFile1">
+                <input type="url" name="imageName" class="form-control-file" id="exampleFormControlFile1">
             </div>
             <div class="col-12 ">
                 <a href="# ">
