--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -18,12 +18,12 @@
             </div>
             <div class="col-md-6 ">
                 <label for="inputEmail4 " class="form-label ">Email</label>
-                <input type="email " name="email" class="form-control " id="inputEmail4 ">
+                <input type="email " name="email" class="form-control " id="inputEmail4 " required>
             </div>
             <div class="col-md-6 ">
                 <label for="inputPassword4 " class="form-label ">Password</label>
                 <!-- <input type="password " class="form-control " id="inputPassword4 "> -->
-                <input type="password" name="password" placeholder="Enter password" id="password">
+                <input type="password" name="password" placeholder="Enter password" id="password" required>
             </div>
             <div class="col-md-2 ">
                 <label for="inputContact " class="form-label ">Contact No. </label>
@@ -31,19 +31,19 @@
             </div>
             <div class="col-12 ">
                 <label for="inputAddress " class="form-label ">Address</label>
-                <input type="text " name="address1" class="form-control " id="inputAddress " placeholder="1234 Main St ">
+                <input type="text " name="address1" class="form-control " id="inputAddress " placeholder="1234 Main St " required>
             </div>
             <div class="col-12 ">
                 <label for="inputAddress2 " class="form-label ">Address 2</label>
-                <input type="text " name="address2" class="form-control " id="inputAddress2 " placeholder="Apartment, studio, or floor ">
+                <input type="text " name="address2" class="form-control " id="inputAddress2 " placeholder="Apartment, studio, or floor " required>
             </div>
             <div class="col-md-6 ">
                 <label for="inputCity " class="form-label ">City</label>
-                <input type="text " name="city" class="form-control " id="inputCity ">
+                <input type="text " name="city" class="form-control " id="inputCity " required>
             </div>
             <div class="col-md-4 ">
                 <label for="inputState " class="form-label ">State</label>
-                <select id="inputState " name="state" class="form-select ">
+                <select id="inputState " name="state" class="form-select " required>
                     <option selected>Choose...</option>
                     <!-- <option></option> -->
                     <option value="Andhra Pradesh">Andhra Pradesh</option>
@@ -86,11 +86,11 @@
             </div>
             <div class="col-md-2 ">
                 <label for="inputZip " class="form-label ">Zip</label>
-                <input type="text " name="zip" class="form-control " id="inputZip ">
+                <input type="text " name="zip" class="form-control " id="inputZip " required>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlFile1">Add profile pic </label>
-                <input type="file" name="fileName" class="form-control-file" id="exampleFormControlFile1">
+                <input type="url" name="fileName" class="form-control-file" id="exampleFormControlFile1">
             </div>
             <!-- <div class="col-12 ">
                 <div class="form-check ">
@@ -101,7 +101,7 @@
                 </div>
             </div> -->
             <div class="col-12 ">
-                <a href="/profile">
+                <a href="/home">
                     <button type="submit " class="btn btn-primary ">Sign in</button>
                 </a>
             </div>
