--- a/views/cprofile.ejs
+++ b/views/cprofile.ejs
@@ -47,7 +47,7 @@
                                         <div class="col-md-6"><label>Phone</label></div>
                                         <div class="col-md-6">
                                             <p>
-                                                <%=customer[i].COntact%>
+                                                <%=customer[i].Contact%>
                                             </p>
                                         </div>
                                     </div>
