--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -88,10 +88,10 @@
                 <label for="inputZip " class="form-label ">Zip</label>
                 <input type="text " name="zip" class="form-control " id="inputZip " required>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="exampleFormControlFile1">Add profile pic </label>
                 <input type="url" name="fileName" class="form-control-file" id="exampleFormControlFile1">
-            </div>
+            </div> -->
             <!-- <div class="col-12 ">
                 <div class="form-check ">
                     <input class="form-check-input " type="checkbox " id="gridCheck ">
