--- a/views/order.ejs
+++ b/views/order.ejs
@@ -11,10 +11,16 @@
                 <h4 class="mb-0" style="text-align:center;">Shopping cart</h4> -->
                 <% for(var i=0;i<items.length;i++) { let item=items[i];%>
                     <div class="d-flex justify-content-between align-items-center mt-3 p-2 items rounded">
-                        <div class="d-flex flex-row"><img class="rounded" src=<%=item.image%> width="40">
-                            <div class="ml-2"><span class="font-weight-bold d-block"><%=item.name%></span><span class="spec"><%=item.desc%></span><span><button type="button" class="btn btn-danger btn-sm">Remove</button></span></div>
+                        <div class="d-flex flex-row">Order Date :
+                            <div class="ml-2">
+                                <span class="font-weight-bold d-block"><%=item.orderDate%></span>
+                            </div>
                         </div>
-                        <div class="d-flex flex-row align-items-center"><span class="d-block">2</span><span class="d-block ml-5 font-weight-bold"><%=item.price%></span><i class="fa fa-trash-o ml-3 text-black-50"></i></div>
+                        <h4 class="spec">
+                            <%=item.address%>
+                        </h4>
+                        <button type="button" class="btn btn-danger btn-sm">View Items</button>
+                        <div class="d-flex flex-row align-items-center"><span class="d-block">2</span><span class="d-block ml-5 font-weight-bold"><%=item.amount%></span><i class="fa fa-trash-o ml-3 text-black-50"></i></div>
                     </div>
                     <%}%>
             </div>
