--- a/views/partials/cards.ejs
+++ b/views/partials/cards.ejs
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem; margin: auto; border: 4px solid;  border-color: rgb(210, 179, 3);">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="<%=image%>" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">
             <%=title%>
