--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/cprofile.css">
     <link rel="stylesheet" href="/assets/css/query.css">
     <script src="/assets/js/login.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">SRS</a>
+            <a class="navbar-brand" href="#">Mangalam Jewellers</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,21 +38,21 @@
                     <li>
                         <a class="nav-link active" href="../addProduct" role="button">Add Product</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="nav-link active" href="../orderstatus" role="button">Order status</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="nav-link active" href="../viewcart" role="button">View Cart</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="nav-link active" href="../query" role="button">Chat us</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="nav-link active" href="../CustomerProfile" role="button">View Profile</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="nav-link active" href="../order" role="button">View order</a>
-                    </li>
+                    </li> -->
                 </ul>
 
             </div>
