--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -2,7 +2,7 @@
 
     <form class="d-flex" role="search">
         <!-- <a class="btn btn-primary" href="#" role="button">Log in</a> -->
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" id="myInput" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search item</button>
     </form>
 </div>
