--- a/views/viewcart.ejs
+++ b/views/viewcart.ejs
@@ -12,7 +12,7 @@
                 <% for(var i=0;i<items.length;i++) { let item=items[i];%>
                     <div class="d-flex justify-content-between align-items-center mt-3 p-2 items rounded">
                         <div class="d-flex flex-row"><img class="rounded" src=<%=item.image%> width="40">
-                            <div class="ml-2"><span class="font-weight-bold d-block"><%=item.name%></span><span class="spec"><%=item.desc%></span><span><button type="button" class="btn btn-danger btn-sm">Remove</button></span></div>
+                            <div class="ml-2"><span class="font-weight-bold d-block"><%=item.name%></span><span class="spec"><%=item.desc%></span><span><button type="button" onclick="location.href='/removefromCart?id=<%=items._id%>'" class="btn btn-danger btn-sm">Remove</button></span></div>
                         </div>
                         <div class="d-flex flex-row align-items-center"><span class="d-block">2</span><span class="d-block ml-5 font-weight-bold"><%=item.price%></span><i class="fa fa-trash-o ml-3 text-black-50"></i></div>
                     </div>
@@ -20,7 +20,7 @@
 
             </div>
         </div>
-        <div style="display:flex;justify-content:space-around; margin-top: 20px ;"><button class="btn btn-primary">Place Order</button></div>
+        <div style="display:flex;justify-content:space-around; margin-top: 20px ;"><button class="btn btn-primary" onclick="location.href='/addorder'">Place Order</button></div>
         </body>
         <%-include("partials/footer.ejs")%>
 
